Add Black and Flake8 tooling; refactor `inject` mode for reliable multi-tool calls; format codebase
 **Linting and Formatting**
 - Introduce `.flake8` configuration (line-length=88, ignore E203, standard excludes).
 - Add `black` and `flake8` to `pyproject.toml` dependencies.
 - Configure `[tool.black]` in `pyproject.toml` (line-length=88, py38 target, standard excludes).
 - Apply Black formatting across all Python sources for consistent style.

 **Refactor `inject` Mode**
 - Switch tool schema from single `generate_docstrings` (batched array) to `generate_one_docstring` (single name/body per call).
 - Update `generator.py` to handle multiple `tool_calls`, process each iteratively, and improve error handling/messages.
 - Revise `strategies.py` tool description and parameters for single-docstring focus.
 - Update `templates/docstring_generator.json` user prompt to instruct multiple tool calls (one per function/module).
 - Enhance `tools.py` docstring insertion: use precise `node.body[0].lineno` for function bodies; improve module handling and
 cleanup.
 - Remove forced `tool_choice`; allow model-driven calls for better compatibility.

 **Cleanup and Fixes**
 - Delete generated `my_test.doc.py`.
 - Update `.gitignore`: add `GEMINI.md`.
 - Add `noqa: F401` to unused config import.
 - Fix minor issues: newlines, multiline strings, console.print formatting, insertion indices.

 These changes enforce code quality standards, improve `inject` mode robustness (e.g., no KeyError on malformed JSON), and prepare
 for stricter linting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "python-dotenv",
     "rich",
     "pytest",
-    "tiktoken"
+    "tiktoken",
+    "black",   # <--- ADDED
+    "flake8"   # <--- ADDED
 ]
 
 [project.scripts]
@@ -18,6 +20,24 @@ ai-docify = "ai_docify.cli:main"
 [tool.setuptools.packages.find]
 where = ["src"]
 
-# CRITICAL: This ensures the JSON template is packaged with the code
 [tool.setuptools.package-data]
 ai_docify = ["templates/*.json", "config/*.json"]
+
+# --- ADD THIS SECTION AT THE BOTTOM ---
+[tool.black]
+line-length = 88
+target-version = ['py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
