tests and feat: Move dev dependencies to optional group, add test suite, and fix AST docstring checks
 - pyproject.toml:
   - Remove pytest, black, and flake8 from main runtime dependencies.
   - Introduce [project.optional-dependencies].dev and add:
     - pytest, black, flake8, pytest-cov
   - Rationale: keep runtime dependencies minimal and declare developer tools/test deps as an opt-in extra (PEP 621 style).

 - src/ai_docify/tools.py:
   - Replace isinstance(..., (ast.Str, ast.Constant)) checks with isinstance(..., ast.Constant)
     for module and function top-level docstring detection.
   - Rationale: normalize AST string-node checking to use ast.Constant (consistent with modern
     Python AST behaviour) and avoid relying on ast.Str which is not used on newer Python versions.

 - tests/:
   - Add a comprehensive test suite covering:
     - builder (tests/test_builder.py)
     - CLI flows (tests/test_cli.py)
     - config parsing and model validation/pricing (tests/test_config.py)
     - generator behavior, error handling, provider initialization and tool call handling (tests/test_generator.py)
     - strategies constant schema (tests/test_strategies.py)
     - tools (insert_docstrings_to_source) edge cases and behaviors (tests/test_tools.py)
     - utils (token cost calculation and estimate_cost with tiktoken fallback) (tests/test_utils.py)
     - package version sanity check (tests/test_version.py)
   - Add test package init (tests/__init__.py) and shared fixtures (tests/conftest.py) which:
     - ensure src is on sys.path for imports
     - provide reusable pytest fixtures and OpenAI client mocks
   - Rationale: increase coverage and validate core functionality (message building, cost estimation,
     docstring insertion, CLI interactions, and generator interactions) with isolated unit tests and mocks.

 Overall: separate development tooling from runtime requirements, add pytest-cov for coverage, introduce a broad suite of unit tests
 to harden core behavi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,15 @@ dependencies = [
     "openai",
     "python-dotenv",
     "rich",
-    "pytest",
     "tiktoken",
-    "black",   # <--- ADDED
-    "flake8"   # <--- ADDED
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "black",
+    "flake8",
+    "pytest-cov",
 ]
 
 [project.scripts]
