Refactor configuration, payload construction, and docstring generation flow; update docs and packaging
 - Consolidate pricing/config:
   - Add new src/ai_docify/config.py to centralize loading/validation/get-price logic and fallback defaults.
   - Move pricing.json to package root (src/ai_docify/pricing.json) and update pyproject package-data to include it.
   - Remove old config package and config/config.py to simplify module layout and pathing.

 - Centralize LLM payload construction and tool schema:
   - Remove builder.py and strategies.py; embed DOCSTRING_TOOL_SCHEMA and new payload preparation in generator.
   - Add prepare_llm_payload (generator.prepare_llm_payload) to produce canonical messages and attach tool schema for "inject" mode.
   - Update utils.estimate_cost to call prepare_llm_payload so cost estimates match actual payloads.

 - Rewrite generator and tools:
   - Major refactor of src/ai_docify/generator.py:
     - New payload-driven flow (prepare -> call -> extract usage -> handle rewrite/inject).
     - Cleaner handling of API clients (ollama vs openai), usage extraction, and response content stripping.
     - Simplified and more robust inject handling: parse tool_calls, build docstring map, call insert_docstrings_to_source.
     - Consolidated error wrapping using AIDocifyError and improved logging.
   - Replace and harden docstring insertion logic in src/ai_docify/tools.py:
     - New _clean_docstring helper, better handling of module/class/async/function docstrings,
       preserved blank lines, and correct indentation/insertion strategy.
     - Type hints and clearer control flow.

 - Token / cost helpers:
   - Update src/ai_docify/utils.py to:
     - Rely on the centralized payload generator for token estimation.
     - Use tiktoken encoding selection with fallback and include message overhead for estimation.
     - Provide calculate_token_cost helper and return structured estimate including currency.

 - CLI and logging:
   - Initialize loggi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,8 @@ ai-docify = "ai_docify.cli:main"
 where = ["src"]
 
 [tool.setuptools.package-data]
-ai_docify = ["templates/*.json", "config/*.json"]
+ai_docify = ["templates/*.json", "pricing.json"]
 
-# --- ADD THIS SECTION AT THE BOTTOM ---
 [tool.black]
 line-length = 88
 target-version = ['py38']
