--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,22 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "ai-docify"
 version = "0.1.0"
-description = "A simple CLI tool for generating safe, high-quality, NumPy/Sphinx style docstrings."
+description = "A CLI tool for generating safe, NumPy/Sphinx style docstrings using AST parsing."
+readme = "README.md"  
+authors = [
+  { name = "John Spencer", email = "johnspencer97@live.co.uk" },
+]
+license = { text = "MIT" }
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Documentation",
+]
 requires-python = ">=3.8"
 dependencies = [
     "click",
@@ -18,6 +33,8 @@ dev = [
     "black",
     "flake8",
     "pytest-cov",
+    "build",    # <--- Added 'build' so you can run 'python -m build' easily
+    "twine",    # <--- Added 'twine' for uploading to PyPI
 ]
 
 [project.scripts]
